- Fixed DHCP fingerprint sharing upload form
- Fixed Web Admin which referred to an inexistent Meru MC3000 module (it was 
  renamed Meru::MC in 2.0.1)
- Fixed an issue with the Meru module: If the controller sent SNMP traps to 
  PacketFence a thread would crash. Hopefully this configuration is not 
  required and is rarely done. Regression prevention tests have been added.
- Minor fixes to the Administration Guide (#743)

Translations
- New German (de) translation (Thanks to Tino Matysiak of Meetyoo Conferencing)

--------------------------------------------------------------------------------
Version 2.1.0 released on 2011-03-03

New Hardware Support
- Added Avaya as rebranded Nortel's
- Support for Nortel's ERS5500 with firmware 6.x
- 802.1X support with or without VoIP for Cisco 2950

New Features
- New configuration validation interface in Web Admin and with "pfcmd checkup"
- javascript-based network access detection (experimental)
- JSON bindings for node information (experimental)

Enhancements
- Improvements to our Nortel support
- Developer documentation update
- Friendlier startup error messages
- More configuration validation on startup and in 'pfcmd checkup' (#1025, 
  #1193)
- Improved support for Desktop Linux clients (#1188)
- New DHCP fingerprints for Cisco, UniData and Nortel IP Phones, Cisco Small 
  Business switch, Netgear router, Generic Linux, Gentoo, Meego, LaCie NAS, 
  Xyratex NAS, iPod/iPad, Samsung, LG, Sony Ericsson and Sharp smartphones, 
  Samsung, HTC and Pantech Android phones, APC and Tripplite UPS, some Generic
  Thin Clients, HP, Xerox and Brother printers, Mac OS X and finally last but 
  not least a what-is-believed to be a Palm OS fingerprint!
- Improved test suite
- Miscellaneous code cleanup (#1165)
- Generated configuration files are now in var/... (#1014)
- pid files are now in var/run/
- Module versioning to improve handling of API changes in extension points
- Improvements to Captive Portal library utilities

Bug fixes